#define NULL ((void*)0)
typedef unsigned long size_t;  // Customize by platform.
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;  // Either arithmetic or pointer type.
/* By default, we understand bool (as a convenience). */
typedef int bool;
#define false 0
#define true 1

/* Forward declarations */

/* Type definitions */
typedef  int /*<<< orphan*/  YabSock ;

/* Variables and functions */
 int recv (int /*<<< orphan*/ ,void*,int,int) ; 

int YabSockReceive(YabSock sock, void *buf, int len, int flags)
{
   return recv(sock, buf, len, flags);
}